# rinha-with-rust-2025

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile.api  Dockerfile.worker  Makefile  TASKS.md  docker-compose.yml  rinha-docker-compose-arm64.yml
reports/: report_20250815_193412.html
src/: config.rs  gateway.rs  handler.rs  lib.rs  repository.rs  types.rs  worker.rs
src/api/: main.rs
src/worker/: main.rs
